.gitignore: Don't ignore Cmake files
- Remove Cmake files from ".gitignore".
+ Add project specific binaries to ".gitignore".

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,11 @@
+### project sepcific binaries ###
+convertor
+*.o
+
 ### ggtags ###
 GPATH
 GRTAGS
 GTAGS
-
-### CMake ###
-CMakeLists.txt.user
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
-_deps
-
-### CMake Patch ###
-# External projects
-*-prefix/
 
 ### Emacs ###
 # -*- mode: gitignore; -*-
